Pequenas mudanças no hover.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3946,7 +3946,7 @@ textarea.form-control-lg {
   padding: 0.5rem 1rem;
   color: #1abc9c;
   text-decoration: none;
-  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
   .nav-link {
@@ -11370,7 +11370,8 @@ html {
   color: #fff;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-  color: #cc00cc;
+  color: #000;
+  background-color: #cc00cc;
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
   color: #fff;
