--- a/css/styles.css
+++ b/css/styles.css
@@ -11450,7 +11450,7 @@ html {
 
 @media (min-width: 992px) {
   .masthead {
-    padding-top: calc(6rem + 104px);
+    padding-top: calc(1rem + 104px);
     padding-bottom: 6rem;
   }
   .masthead .masthead-heading {
@@ -11511,3 +11511,79 @@ html {
 .copyright {
   background-color: #1a252f;
 }
+
+/* MINHAS ALTERAÇÕES*/
+#sliderGRID{
+  border-radius: 50px;
+}
+
+/* #sliderGRID:hover{
+  box-shadow: 1px 1px 15px #cc00cc;
+  transition: 0.4s;
+} */
+
+#tituloSLIDER{
+  color: #fff;
+  text-shadow: 1px 1px 20px #cc00cc;
+}
+
+#subtituloSLIDER{
+  color: #fff;
+  font-weight: lighter;
+  font-style: italic;
+  text-shadow: 1px 1px 1px #cc00cc;
+}
+
+#botaoSLIDERprev{
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+}
+
+#botaoSLIDERnext{
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
+#botaoSLIDERprev:hover{
+  background-color: rgba(0, 0, 0, 0.4);
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+  transition: 0.15s;
+}
+
+#botaoSLIDERnext:hover{
+  background-color: rgba(0, 0, 0, 0.4);
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  transition: 0.15s;
+}
+
+/* ZOOM */
+.zoom{
+  overflow: hidden;
+}
+
+.zoom img{
+  max-width: 100%;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.zoom:hover img {
+  opacity: 100%;
+	-moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+  -webkit-filter:grayscale(0%);
+}
+
+/* NAVBAR BRAND */
+.navbar-brand:hover{
+  text-shadow: 1px 1px 20px #cc00cc;
+  transition: 0.15s !important;
+}
+/* .carousel-caption{
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50px;
+} */
