Pequenas alterações no hover.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11371,7 +11371,7 @@ html {
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
   color: #000;
-  background-color: #cc00cc;
+  background-color: rgba(255, 255, 255, 1);
 }
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
   color: #fff;
@@ -11598,6 +11598,7 @@ html {
   text-shadow: 1px 1px 20px #cc00cc;
   transition: 0.15s !important;
 }
+
 
 /* .carousel-caption{
   background-color: rgba(0, 0, 0, 0.5);
