--- a/css/styles.css
+++ b/css/styles.css
@@ -11584,6 +11584,7 @@ html {
 .zoom img{
   -webkit-filter: blur(2px);
   opacity: 70%;
+  -webkit-filter: grayscale(60%);
   max-width: 100%;
 	-moz-transition: all 0.3s;
 	-webkit-transition: all 0.3s;
@@ -11593,6 +11594,7 @@ html {
 .zoom:hover img {
   -webkit-filter: blur(0px);
   opacity: 100%;
+  -webkit-filter: grayscale(0%);
 	-moz-transform: scale(1.1);
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
