Nova fonte para legendas.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11536,16 +11536,20 @@ html {
 }
 
 #legendaSLIDER{
-  font-family: Resolve Sans W05 thin;
+  font-family: Resolve-thin;
   color: #fff;
   /* text-shadow: 1px 1px 5px #cc00cc; */
   letter-spacing: .2rem;
+  /* font-weight: lighter; */
+  font-style: italic;
 }
 
 #legendaTOPO{
-  font-family: Resolve Sans W05 thin;
+  font-family: Resolve-thin;
   color: #fff;
   letter-spacing: .2rem;
+  /* font-weight: lighter; */
+  font-style: italic;
 }
 
 #legendaSOBRE{
