--- a/css/styles.css
+++ b/css/styles.css
@@ -11687,13 +11687,8 @@ a{
   transition: 0.4s;
 }
 
-#frameYT{
-  box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.9);
-}
-
-#frameYT:hover{
-  box-shadow: 0px 0px 5px 1px rgba(204, 0, 204, 0.9);
-  transition: 0.25s;
+@media (max-width: 768px){
+  #frameYT{ min-width: 100%; }
 }
 
 /* .carousel-caption{
